[gd_scene load_steps=8 format=3 uid="uid://dadkuus73lmt3"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="1_bjsbo"]
[ext_resource type="Script" path="res://scripts/menus/main_menu/saves_panel.gd" id="1_xr6w7"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="2_kwud6"]
[ext_resource type="Script" path="res://scripts/menus/scroll_better_follow.gd" id="3_tdsiv"]
[ext_resource type="PackedScene" uid="uid://dshs45wq2wig1" path="res://prefabs/ui/main_menu/load_save_item_panel.tscn" id="4_j4q1u"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="5_pcdf1"]
[ext_resource type="PackedScene" uid="uid://b03wrcogq8csb" path="res://prefabs/ui/inventory/item_confirm_panel.tscn" id="6_6dgbh"]

[node name="SavesPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bjsbo")
script = ExtResource("1_xr6w7")

[node name="SavesPanelLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -236.5
offset_top = 19.0
offset_right = 236.5
offset_bottom = 69.0
grow_horizontal = 2
theme = ExtResource("2_kwud6")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center]Save Game[/center]"
fit_content = true

[node name="ScrollContainer" type="ScrollContainer" parent="." node_paths=PackedStringArray("boxContainer")]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 70.0
offset_top = -276.0
offset_right = -70.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
script = ExtResource("3_tdsiv")
boxContainer = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="LoadSaveItemPanel" parent="ScrollContainer/VBoxContainer" instance=ExtResource("4_j4q1u")]
layout_mode = 2

[node name="LoadSaveItemPanel2" parent="ScrollContainer/VBoxContainer" instance=ExtResource("4_j4q1u")]
layout_mode = 2
saveFolder = "save1"
saveSlotName = "Save File 1"

[node name="LoadSaveItemPanel3" parent="ScrollContainer/VBoxContainer" instance=ExtResource("4_j4q1u")]
layout_mode = 2
saveFolder = "save2"
saveSlotName = "Save File 2"

[node name="LoadSaveItemPanel4" parent="ScrollContainer/VBoxContainer" instance=ExtResource("4_j4q1u")]
layout_mode = 2
saveFolder = "save3"
saveSlotName = "Save File 3"

[node name="LoadSaveItemPanel5" parent="ScrollContainer/VBoxContainer" instance=ExtResource("4_j4q1u")]
layout_mode = 2
saveFolder = "save4"
saveSlotName = "Save File 4"

[node name="LoadSaveItemPanel6" parent="ScrollContainer/VBoxContainer" instance=ExtResource("4_j4q1u")]
layout_mode = 2
saveFolder = "save5"
saveSlotName = "Save File 5"

[node name="BackButton" parent="." instance=ExtResource("5_pcdf1")]
custom_minimum_size = Vector2(80, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -64.0
offset_right = 40.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
text = "Back"

[node name="ItemConfirmPanel" parent="." instance=ExtResource("6_6dgbh")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="visibility_changed" from="ScrollContainer" to="ScrollContainer" method="_on_visibility_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="confirm_option" from="ItemConfirmPanel" to="." method="_on_item_confirm_panel_confirm_option"]
